--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,4 +1,5 @@
 FROM eclipse-temurin:17-jdk
 WORKDIR /app
-COPY build/libs/*.jar app.jar
+ARG JAR_FILE=build/libs/*.jar
+COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java","-jar","app.jar"]
