--- a/service-auth/src/main/resources/application.properties
+++ b/service-auth/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.hikari.maximum-pool-size=5
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
 
 # Configuration JWT
-jwt.secret=your256bitsecretmakeitverylongandcomplex1234567890
+jwt.secret=${JWT_SECRET}
 jwt.expiration-ms=86400000
 
 # Logging
