--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -53,7 +53,8 @@ jobs:
           image: lyes97/neoinvo-api-gateway
           tags: latest
           registry: docker.io
-          dockerfile: api-gateway/Dockerfile
+          context: ./api-gateway
+          dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -64,7 +65,8 @@ jobs:
           image: lyes97/neoinvo-service-auth
           tags: latest
           registry: docker.io
-          dockerfile: service-auth/Dockerfile
+          context: ./service-auth
+          dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
