--- a/service-auth/Dockerfile
+++ b/service-auth/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17-jdk-slim
-ARG JAR_FILE=build/libs/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+WORKDIR /app
+COPY service-auth/build/libs/*.jar app.jar
+ENTRYPOINT ["java", "-jar", "app.jar"]
