fix(deploy): create .env file from secrets before copying to VPS

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -132,8 +132,14 @@ jobs:
       - name: Launch Docker Compose remotely
         run: |
           ssh -o StrictHostKeyChecking=no lyes@195.35.24.85 << 'EOF'
+            # Install Docker Compose if not present
+            if ! command -v docker-compose &> /dev/null; then
+              sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+              sudo chmod +x /usr/local/bin/docker-compose
+            fi
+
             cd ~/neoinvo-deploy
-            docker compose down
-            docker compose up -d
+            docker-compose down
+            docker-compose up -d
           EOF
 
