--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -137,9 +137,13 @@ jobs:
               sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
               sudo chmod +x /usr/local/bin/docker-compose
             fi
-
             cd ~/neoinvo-deploy
             docker-compose down
+            docker-compose up -d mysql-auth
+            while ! docker-compose exec -T mysql-auth mysqladmin ping -h localhost -u root -p$MYSQL_ROOT_PASSWORD --silent; do
+              echo "Waiting for MySQL to be ready..."
+              sleep 5
+            done
             docker-compose up -d
           EOF
 
