fix(ci): ensure docker-compose launches correctly on VPS

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -131,11 +131,14 @@ jobs:
 
       - name: Launch Docker Compose remotely
         run: |
-          ssh -o StrictHostKeyChecking=no lyes@195.35.24.85 << 'EOF'
+          ssh -o StrictHostKeyChecking=no lyes@195.35.24.85 << EOF
+            set -e
+            export MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}
             cd ~/neoinvo-deploy
+            docker ps --format '{{.ID}} {{.Ports}}' | grep -E '8080|3306' | awk '{print \$1}' | xargs -r docker stop || true
             docker-compose down || true
             docker-compose up -d mysql-auth
-            timeout 300 bash -c 'until docker-compose exec -T mysql-auth mysqladmin ping -uroot -p$$MYSQL_ROOT_PASSWORD --silent; do 
+            timeout 300 bash -c 'until docker-compose exec -T mysql-auth mysqladmin ping -uroot -p$MYSQL_ROOT_PASSWORD --silent; do
               echo "Waiting for MySQL to be ready..."
               sleep 10
             done' || (echo "MySQL failed to start"; exit 1)
