--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -138,7 +138,7 @@ jobs:
             docker ps --format '{{.ID}} {{.Ports}}' | grep -E '8080|3306' | awk '{print \$1}' | xargs -r docker stop || true
             docker-compose down || true
             docker-compose up -d mysql-auth
-            timeout 300 bash -c 'until docker-compose exec -T mysql-auth mysqladmin ping -uroot -p$MYSQL_ROOT_PASSWORD --silent; do
+            timeout 300 bash -c 'until docker-compose exec -T mysql-auth mysqladmin ping -uroot --password=$MYSQL_ROOT_PASSWORD --silent; do
               echo "Waiting for MySQL to be ready..."
               sleep 10
             done' || (echo "MySQL failed to start"; exit 1)
