--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -103,6 +103,10 @@ jobs:
           MYSQL_USER=${{ secrets.MYSQL_USER }}
           MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }}
           MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}
+          SPRING_MAIL_HOST=${{ secrets.SPRING_MAIL_HOST }}
+          SPRING_MAIL_PORT=${{ secrets.SPRING_MAIL_PORT }}
+          SPRING_MAIL_USERNAME=${{ secrets.SPRING_MAIL_USERNAME }}
+          SPRING_MAIL_PASSWORD=${{ secrets.SPRING_MAIL_PASSWORD }}
           EOF
 
       - name: Set up SSH
