--- a/service-auth/src/main/resources/application.properties
+++ b/service-auth/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8081
 
 # Configuration Database
-spring.datasource.url=jdbc:mysql://mysql-auth:3306/neoinvo_auth?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=neoinvo_user
-spring.datasource.password=MotDePasseFort@123
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
@@ -16,8 +16,16 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 
 # Configuration JWT
 jwt.secret=${JWT_SECRET}
-jwt.expiration-ms=86400000
+jwt.expiration-ms=${JWT_EXPIRATION_MS}
 
 # Logging
 logging.level.org.springframework.security=DEBUG
 logging.level.com.neoinvo.invoice=TRACE
+
+# Email
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
