feat(auth): add OTP-based 2FA system with email verification

--- a/service-auth/Dockerfile
+++ b/service-auth/Dockerfile
@@ -1,5 +1,6 @@
 FROM eclipse-temurin:17-jdk
 
+# Installer les certificats SSL nécessaires pour HTTPS
 RUN apt-get update && apt-get install -y \
     ca-certificates \
     curl \
